# obs_avoidance_simulator

./: README.md
src/obs_avoidance_sim/: CMakeLists.txt  package.xml
src/obs_avoidance_sim/launch/: obstacle_avoidance_launch.py
src/obs_avoidance_sim/src/: obstacle_avoidance.cpp
src/obs_avoidance_sim/urdf/: robot.urdf
src/obs_avoidance_sim/worlds/: obstacle_world.world
