<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>obs_avoidance_sim</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="s8sukuma@uwaterloo.ca">Shahithya Sukumar</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <launch>
      <launch_file>launch/obstacle_avoidance_launch.py</launch_file>
    </launch>
  </export>
</package>
